fix: add overflow hidden for #app

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ body {
 #app {
     margin: 0 auto;
     text-align: center;
+    overflow: hidden;
 }
 
 @media (prefers-color-scheme: light) {
